--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">getIPByName</string>
+    <string name="defaultsite">alltrue.tk</string>
+    <string name="ipbutton">get IP</string>
 </resources>
